--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
-  # google_sign_in: ^6.2.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  
+ 
   
 
 dev_dependencies:
@@ -82,6 +85,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - appImage/
+     - accessories/
+     - bouqets/
+     - dresses/
 #     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
